# SentiSign

./: .gitignore  README.md  pyproject.toml  webcam_emotion_torch.py  webcam_emotion_tts_torch.py
demos/: run_emotion_tts.py  run_emotion_webcam.py  run_full_pipeline.py  run_sign_to_text.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MODULE_GUIDE.md  SETUP.md
models/: README.md
sentisign/emotion/: README.md  inference.py
sentisign/integration/: README.md
sentisign/sign_language/: README.md
sentisign/tts/: README.md  emotion_descriptions.py  expressive_tts.py
sentisign/utils/: device.py  video.py
