[project]
name = "main-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.12.0.88",
    "parler-tts",
    "pillow>=11.3.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[project.scripts]
webcam_emotion_tts_torch = "webcam_emotion_tts_torch:main"
webcam_emotion_torch = "webcam_emotion_torch:main"

[tool.uv.sources]
parler-tts = { git = "https://github.com/huggingface/parler-tts.git" }
