[project]
name = "sentisign"
version = "0.1.0"
description = "Sign Language to Speech with Emotion - A multi-modal system for expressive communication"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "SentiSign Team"}
]
keywords = ["sign-language", "emotion-detection", "text-to-speech", "computer-vision", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "opencv-python>=4.12.0.88",
    "parler-tts",
    "pillow>=11.3.0",
    "soundfile",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers",
]

[project.urls]
Homepage = "https://github.com/SHN2004/SentiSign"
Repository = "https://github.com/SHN2004/SentiSign"
Issues = "https://github.com/SHN2004/SentiSign/issues"


